--- a/README.org
+++ b/README.org
@@ -2,12 +2,12 @@
 #+author: Ulysses Carlos
 
 * Description
-This repository contains multiple minor C and C++ programs. Each program can be compiled individually through the use of GCC/G++ or any other compiler. The project can also be built using CMake.
+This repository contains minor C and C++ programs. Each program can be compiled individually through the use of GCC/G++ or any other compiler. The project can also be built using CMake. 
 
 The repository contains programs such as
 
 + An Implementation of std::vector
 + Text-based implementation of Snake
-+ Integer to English word equivalent  
++ Integer_to_English.cc, a program that converts a int64_t number to its english equivalent.
 + Text-based implementation of Connect Four
 + Text-based implementation of Tic-Tac-Toe
